All_Component_DX/force-app/main/default/objects/Time_Tracker__c/Time_Tracker__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This is to track time spend for various services delivered on Case.</description>
    <label>Time Tracker</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>