All_Component_DX/force-app/main/default/objects/Time_Tracker__c/fields/Billable_Line_Price__c.field-meta.xml
<CustomField>
    <fullName>Billable_Line_Price__c</fullName>
    <label>Billable Line Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>