All_Component_DX/force-app/main/default/objects/Time_Tracker__c/fields/Billable_Qty__c.field-meta.xml
<CustomField>
    <fullName>Billable_Qty__c</fullName>
    <label>Billable Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>