All_Component_DX/force-app/main/default/objects/Time_Tracker__c/fields/Billing_Information__c.field-meta.xml
<CustomField>
    <fullName>Billing_Information__c</fullName>
    <label>Billing Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>