All_Component_DX/force-app/main/default/objects/Time_Tracker__c/fields/Calculate_Price__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculate Price</label>
    <type>Checkbox</type>
</CustomField>