All_Component_DX/force-app/main/default/objects/Time_Tracker__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Time Tracker</relationshipLabel>
    <relationshipName>Time_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>