All_Component_DX/force-app/main/default/objects/Time_Tracker__c/fields/End_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_and_Time__c</fullName>
    <label>End Date and Time</label>
    <type>DateTime</type>
</CustomField>