All_Component_DX/force-app/main/default/objects/Time_Tracker__c/fields/Line_Qty__c.field-meta.xml
<CustomField>
    <fullName>Line_Qty__c</fullName>
    <label>Line Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>